--- a/assets/css/introduction/button.css
+++ b/assets/css/introduction/button.css
@@ -1,4 +1,4 @@
-.button {
+.nav-button {
     display: block;
     text-decoration: none;
     border: 2px solid rgb(15, 15, 15);
@@ -9,7 +9,8 @@
     padding: 1rem;
     font-size: 16px;
     text-align: center;
-    margin: 5rem auto;
+    margin-left: .5rem;
+    margin-right:.5rem;
     width: 100px;
     border-radius: 10%;
     font-family: 'Monstserrat', sans-serif;
