cleaning up js files

--- a/assets/css/introduction/button.css
+++ b/assets/css/introduction/button.css
@@ -1,9 +1,9 @@
 .nav-button {
     display: block;
     text-decoration: none;
-    border: 2px solid rgb(15, 15, 15);
+    border: 1px solid rgb(15, 15, 15);
     box-shadow: 5px 10px;
-    background: var(--color-3);
+    background: var(--color-2);
     color: white;
     font-weight: bold;
     padding: 1rem;
@@ -11,7 +11,7 @@
     text-align: center;
     margin-left: .5rem;
     margin-right:.5rem;
-    width: 100px;
+    width: 20vh;
     border-radius: 10%;
     font-family: 'Monstserrat', sans-serif;
 }
