working on getting a functioning typed navbar

--- a/assets/css/introduction/button.css
+++ b/assets/css/introduction/button.css
@@ -11,7 +11,7 @@
     text-align: center;
     margin-left: .5rem;
     margin-right:.5rem;
-    width: 20vh;
+    width: 96px;
     border-radius: 10%;
     font-family: 'Monstserrat', sans-serif;
 }
