--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -66,7 +66,7 @@ body {
 .container-nav-row {
     display: flex;
     list-style: none;
-    margin: .5rem auto;
+    margin: 0 auto;
 }
 
 /* Border Styles */
