--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -37,6 +37,17 @@ a {
     max-width: 1200px;
 }
 
+div.intro-container {
+    height: 100vh;
+}
+
+div.typed-intro {
+    max-width: 1200px;
+    position: relative;
+    top: 12%;
+    left: 0%;
+}
+
 .project-container {
     display: flex;
 }
@@ -71,11 +82,6 @@ a {
 /* Border Styles */
 .border-bottom {
     border-bottom: 2px solid var(--color-2);
-}
-
-/* Background Colors */
-.bg-black {
-    background: rgb(29, 25, 25);
 }
 
 /* Padding */
@@ -125,13 +131,13 @@ a {
     margin-top: 42rem;
 }
 
-.text-center {
-    text-align: center;
-}
-
 /* Text Styling */
 .big-text {
     font-size: 42px;
+}
+
+.text-center {
+    text-align: center;
 }
 
 .p-text {
