--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -32,7 +32,7 @@ a {
 /*Flex-Wrapper*/
 .wrapper {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
 }
 /* Container Styles */
 
@@ -59,8 +59,9 @@ a {
 }
 
 .container-about {
-    display: flex;
-    flex-direction: row;
+    /* display: flex;
+    flex-direction: row; */
+    flex-grow: 1;
     border: 1px solid black;
 }
 
