working on a vscode effect for intro-container

--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -29,11 +29,15 @@ body {
 a {
     text-decoration: none;
 }
+
 /*Flex-Wrapper*/
+
 .wrapper {
     display: flex;
-    /* flex-direction: column; */
+    /* margin-left: -8px; */
+    /* margin-right: -8px; */
 }
+
 /* Container Styles */
 
 .container {
@@ -41,60 +45,67 @@ a {
     max-width: 1200px;
 }
 
-.container-flex {
-    display: flex;
-    flex-direction: row;
-}
-
-.container-flex-row {
-    display: flex;
-    list-style: none;
-    margin: 0 auto;
-}
-
-.container-nav-row {
-    display: flex;
-    list-style: none;
-    margin: 0 auto;
-}
-
 .container-about {
-    /* display: flex;
-    flex-direction: row; */
-    flex-grow: 1;
-    border: 1px solid black;
+    flex: 0 0 50%;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 .container-about>p {
-    width: 50%;
-    margin-left: 12rem;
-    margin-top: 4rem;
+    margin-left: 14rem;
+    margin-top: 2rem;
 }
 
 div.intro-container {
-    height: 100vh;
+    height: 70vh;
+    background: #2c2c2c;
+    border: 1px solid lightblue;
 }
 
 div.typed-intro {
     max-width: 1200px;
-    position: relative;
-    top: 12%;
-    left: 0%;
+    margin: 5rem auto;
+    width: 50%;
 }
 
-.project-container {
-    display: flex;
+.container-projects {
+    flex: 1;
+    padding-left: 8px;
+    padding-right: 8px;
 }
 
 .project {
-    flex: 1 250px;
-    width: 250px;
-    height: 250px;
+    width: 150px;
+    height: 150px;
     margin-left: 5px;
     background: rgb(236, 225, 225);
     border: 1px solid black;
 }
 
+.vscode-effect {
+    width: 100%;
+    height: 30px;
+    border: 1px solid lightblue;
+}
+
+.vscode-file {
+    border: 1px solid #e86b43fa;
+    width: 10%;
+    padding: 1px;
+}
+
+.vscode-file-name {
+    width: 100px;
+    margin: 0 0 .1rem auto;
+    border: none;
+    background: #2c2c2c;
+    color: #efefef;
+    border: 1px solid lightblue;
+    padding: 1px;
+}
+.vscode-file-name:hover {
+    cursor: pointer;
+}
 /* Border Styles */
 .border-bottom {
     border-bottom: 2px solid var(--color-2);
@@ -178,11 +189,11 @@ div.typed-intro {
 }
 
 .js-var-color {
-    color: #216bf3c2;
+    color: #759eead6;
 }
 
 .js-string-color {
-    color: #ff5722c9;
+    color: #e86b43fa;
 }
 
 /* Intro */
