--- a/assets/css/dan.css
+++ b/assets/css/dan.css
@@ -1,8 +1,8 @@
 #dan {
   display: block;
   /* width: calc(18 * 15px); */
-  height: calc(18 * 15px);
-  margin: 1rem;
+  /* height: calc(18 * 15px); */
+  margin: .1rem;
 }
 #dan::after {
   content: "";
