--- a/assets/css/dan.scss
+++ b/assets/css/dan.scss
@@ -27,14 +27,14 @@
 
 $size: 15px;
 
-$t: #ffff;
+$t: #2c2c2c;
 $b: #000;
 $eye: #4d1b09;
 $hair: #211a23;
 $s: #f8ece7;
 $ds: #dbccc6;
 $g: #8f8e8e;
-// $t: #000;
+$wh: #efefef;
 
 
 $dan: (($t, $t, $t, $t, $t, $b, $b, $b, $b, $b, $b, $b, $b, $b, $t, $t, $t, $t, $t, $t, $t, $t, $t),
@@ -45,7 +45,7 @@ $dan: (($t, $t, $t, $t, $t, $b, $b, $b, $b, $b, $b, $b, $b, $b, $t, $t, $t, $t, 
     ($t, $t, $hair, $s, $s, $s, $s, $s, $s, $s, $s, $s, $s, $s, $t, $t, $t, $t, $t, $t, $t, $t, $t),
     ($t, $t, $hair, $s, $hair, $hair, $hair, $hair, $s, $s, $s, $hair, $hair, $hair, $t, $t, $t, $t, $t, $t, $t, $t, $t),
     ($t, $t, $hair, $s, $g, $g, $g, $g, $s, $s, $g, $g, $g, $g, $t, $t, $t, $t, $t, $t, $t, $t, $t),
-    ($t, $g, $g, $g, $g, $t, $eye, $g, $g, $g, $g, $t, $eye, $g, $t, $t, $t, $t, $t, $t, $t, $t, $t),
+    ($t, $g, $g, $g, $g, $wh, $eye, $g, $g, $g, $g, $wh, $eye, $g, $t, $t, $t, $t, $t, $t, $t, $t, $t),
     ($t, $s, $s, $s, $g, $g, $g, $g, $s, $ds, $g, $g, $g, $g, $t, $t, $t, $t, $t, $t, $t, $t, $t),
     ($t, $t, $s, $s, $s, $s, $s, $s, $s, $ds, $s, $s, $s, $s, $t, $t, $t, $t, $t, $t, $t, $t, $t),
     ($t, $t, $s, $s, $s, $s, $s, $s, $ds, $ds, $s, $s, $s, $s, $t, $t, $t, $t, $t, $t, $t, $t, $t),
