--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -31,6 +31,7 @@ body {
 
 .wrapper {
     display: flex;
+    flex-direction: column-reverse;
 }
 
 /* Container Styles */
@@ -41,8 +42,8 @@ body {
 }
 
 .container-about {
-    padding-left: 8px;
-    padding-right: 8px;
+    margin-top: 12rem;
+    margin-bottom: 12rem;
 }
 
 .container-about>p {
@@ -52,7 +53,7 @@ body {
 }
 
 div.intro-container {
-    margin-top: .1rem;
+    margin-top: 1rem;
     height: 70vh;
     background: #2c2c2c;
     border: 1px solid lightblue;
@@ -65,14 +66,28 @@ div.typed-intro {
 }
 
 .container-projects {
-    flex: 1;
-    padding-left: 8px;
-    padding-right: 8px;
+    display: flex;
+    flex-direction: column;
+    margin-top: 6rem;
+}
+
+.container-projects>h1 {
+    color: #efefef;
+    margin: 1rem;
+    font-size: 36px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+.project-row {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
 .project {
-    width: 150px;
-    height: 150px;
+    width: 250px;
+    height: 250px;
     margin-left: 5px;
     background: rgb(236, 225, 225);
     border: 1px solid black;
@@ -98,10 +113,12 @@ div.typed-intro {
     padding: 4px;
     font-size: 24px;
 }
+
 .vscode-effect>ul>li>a:hover {
     cursor: pointer;
     border: 1px dashed #e86b43fa;
 }
+
 /* Border Styles */
 .border-bottom {
     border-bottom: 2px solid var(--color-2);
@@ -209,7 +226,7 @@ div.typed-intro {
 
 @media screen and (max-width: 700px) {
     .wrapper {
-        display:flex;
+        display: flex;
         flex-direction: column-reverse;
     }
 
@@ -220,7 +237,7 @@ div.typed-intro {
 
     div.intro-container {
         width: 100%;
-        margin: 5px auto;
+        margin: 5px 5px 5px auto;
         height: 30vh;
     }
 
@@ -228,6 +245,7 @@ div.typed-intro {
         width: 85%;
         margin: 1rem auto;
     }
+
     .vscode-effect>ul {
         list-style: none;
         display: flex;
@@ -236,4 +254,3 @@ div.typed-intro {
     }
 
 }
-
