--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -89,8 +89,9 @@ div.typed-intro {
     width: 250px;
     height: 250px;
     margin-left: 5px;
-    background: rgb(236, 225, 225);
-    border: 1px solid black;
+    background: #2c2c2c;
+    border: 1px solid lightblue;
+    box-shadow: 5px 5px black;
 }
 
 .vscode-effect {
