--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -31,7 +31,7 @@ body {
 
 .wrapper {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
 }
 
 /* Container Styles */
