--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -1,13 +1,6 @@
 @import url('./reset.css');
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Prata&display=swap");
 
-:root {
-    --color-1: #4444;
-    --color-2: rgb(7, 7, 7);
-    --color-3: #4169E1;
-    --color-4: #191970;
-    --color-5: #483d8b;
-}
 
 /* html/body */
 html {
@@ -36,11 +29,13 @@ body {
 
 /* Container Styles */
 
+/* Main Container */
 .container {
     margin: 0 auto;
     max-width: 1200px;
 }
 
+/* About Container */
 .container-about {
     margin-top: 12rem;
     margin-bottom: 12rem;
@@ -59,7 +54,6 @@ div.intro-container {
     margin-top: 12rem;
     height: 30vh;
     background: #2c2c2c;
-    box-shadow: 5px 5px 5px 5px black;
 }
 
 div.typed-intro {
@@ -68,6 +62,7 @@ div.typed-intro {
     width: 50%;
 }
 
+/* Projects Container */
 .container-projects {
     display: flex;
     flex-direction: column;
@@ -88,19 +83,24 @@ div.typed-intro {
     margin: 1rem;
     align-items: inherit;
 }
-
+.project-img {
+    display: flex;
+}
+.project-img>img {
+    width: 500px;
+    height: auto;
+}
 .project-row:nth-child(3) {
     display: flex;
     flex-direction: row-reverse;
 }
 
-.project {
+/* .project {
     flex-grow: 1;
-    margin-left: 5px;
     background: #2c2c2c;
     border: 1px solid lightblue;
     box-shadow: 5px 5px black;
-}
+} */
 
 .project-text {
     flex-basis: 70%;
@@ -115,11 +115,12 @@ div.typed-intro {
     font-weight: bold;
 }
 
-.vscode-effect {
+/* Navbar */
+.navbar {
     width: 100%;
 }
 
-.vscode-effect>ul {
+.navbar>ul {
     position: fixed;
     top: 0;
     list-style: none;
@@ -128,20 +129,20 @@ div.typed-intro {
     margin-top: 1rem;
 }
 
-.vscode-effect>ul>li {
+.navbar>ul>li {
     background: black;
     padding: 10px;
 }
 
-.vscode-effect>ul>li:nth-child(2) {
+.navbar>ul>li:nth-child(2) {
     margin-left: 1rem;
 }
 
-.vscode-effect>ul>li:last-child {
+.navbar>ul>li:last-child {
     margin-left: 1rem;
 }
 
-.vscode-effect>ul>li>a {
+.navbar>ul>li>a {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     color: #efefef;
@@ -150,16 +151,10 @@ div.typed-intro {
     font-size: 24px;
 }
 
-.vscode-effect>ul>li>a:hover {
+.navbar>ul>li>a:hover {
     cursor: pointer;
     border: 1px dashed #e86b43fa;
 }
-
-/* Border Styles */
-.border-bottom {
-    border-bottom: 2px solid var(--color-2);
-}
-
 
 /* Text Styling */
 .big-text {
@@ -265,18 +260,22 @@ div.typed-intro {
         display: flex;
         flex-direction: column;
     }
+
     .container-projects {
         margin: 0;
     }
+
     .project-row {
         margin: 1rem 0 0 0;
     }
+
     .container-about {
         display: flex;
         flex-direction: column;
         margin: 0 0 12rem;
 
     }
+
     .project {
         flex-grow: 1;
         margin-left: 5px;
@@ -284,6 +283,7 @@ div.typed-intro {
         border: 1px solid lightblue;
         box-shadow: 5px 5px black;
     }
+
     .container-about>p {
         margin: 0 auto;
         width: 75%;
@@ -307,7 +307,7 @@ div.typed-intro {
         margin: 1rem auto;
     }
 
-    .vscode-effect>ul {
+    .navbar>ul {
         list-style: none;
         display: flex;
         flex-direction: row;
@@ -318,6 +318,4 @@ div.typed-intro {
     .project-text {
         font-size: 10px;
     }
-
- 
 }
