--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,51 +63,80 @@ div.typed-intro {
 }
 
 /* Projects Container */
-.container-projects {
-    display: flex;
-    flex-direction: column;
-    margin-top: 6rem;
+div.project-container {
+    display: block;
+    width: 100%;
+    height: 100%;
+    animation: fadeIn 0.8s ease-out;
+    /* margin: 0 auto; */
 }
 
-.container-projects>h1 {
-    color: #efefef;
-    margin: 1rem;
-    font-size: 36px;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: bold;
+.project-image-container {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
 }
 
-.project-row {
-    display: flex;
-    flex-direction: row;
-    margin: 1rem;
-    align-items: inherit;
-}
-.project-img {
-    display: flex;
-}
-.project-img>img {
-    width: 500px;
-    height: auto;
-}
-.project-row:nth-child(3) {
-    display: flex;
-    flex-direction: row-reverse;
+.project-container:hover .project-image {
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    -ms-transform: scale (1.2);
+    transform: scale(1.2);
 }
 
-.project-text {
-    flex-basis: 70%;
-    color: #000;
-    font-family: 'Montserrat', sans-serif;
-    margin-left: .5rem;
+.external-links-overlay {
+    position: absolute;
+    bottom: 9%;
+    right: 6%;
+    color: var(--liquid-white);
 }
 
-.project-text>p {
-    padding: 10px;
-    color: #efefef;
-    font-weight: bold;
+.project-container:hover .overlay {
+    opacity: 1;
 }
 
+.project-image {
+    display: block;
+    width: 100%;
+    -webkit-transition: transform 0.8s ease;
+    -moz-transition: transform 0.8s ease;
+    -o-transition: transform 0.8s ease;
+    -ms-transition: transform 0.8s ease;
+    transition: transform 0.8s ease;
+}
+
+.overlay {
+    background: lightblue;
+    position: absolute;
+    opacity: 0;
+    top: 0%;
+    right: 0%;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    -webkit-transition: opacity 0.8s ease;
+    -moz-transition: opacity 0.8s ease;
+    -o-transition: opacity 0.8s ease;
+    -ms-transition: opacity 0.8s ease;
+    transition: opacity 0.8s ease;
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+/* Projects Grid */
+.grid-400 {
+    max-width: 1200px;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 2fr));
+}
 /* Navbar */
 .navbar {
     width: 100%;
