--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,8 +67,8 @@ div.project-container {
     display: block;
     width: 100%;
     height: 100%;
+    border-radius: 50%;
     animation: fadeIn 0.8s ease-out;
-    /* margin: 0 auto; */
 }
 
 .project-image-container {
@@ -76,7 +76,9 @@ div.project-container {
     position: relative;
     width: 100%;
 }
-
+.project-content {
+    margin: 0 6px 0 6px;
+}
 .project-container:hover .project-image {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
@@ -95,8 +97,8 @@ div.project-container {
 .external-links-overlay p a {
     border-radius: 15px;
     padding: 6px 12px;
-    background-color: teal;
-    color: #efefef;
+    background-color: lightblue;
+    color: #000;
     text-decoration: none;
     border: 1px solid transparent;
     -webkit-transition: all 0.3s ease;
@@ -121,7 +123,8 @@ div.project-container {
 }
 
 .overlay {
-    background: lightblue;
+    background: #2c2c2c;
+    color: #efefef;
     position: absolute;
     opacity: 0;
     top: 0%;
@@ -136,6 +139,21 @@ div.project-container {
     transition: opacity 0.8s ease;
 }
 
+.year-overlay {
+    position: absolute;
+    bottom: 7%;
+    left: 6%;
+    padding: 0 6px;
+    border-bottom: 1px solid #efefef;
+    color: #efefef;
+    font-size: 1rem;
+    font-weight: bold;
+}
+.project-title {
+    font-weight: bold;
+    font-size: 1rem;
+    margin-top: 2%;
+}
 @keyframes fadeIn {
     0% {
         opacity: 0;
@@ -145,12 +163,17 @@ div.project-container {
         opacity: 1;
     }
 }
+
 /* Projects Grid */
 .grid-400 {
     max-width: 1200px;
+    margin-top: 12rem;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(400px, 2fr));
+    grid-gap: 5px;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
+    
 }
+
 /* Navbar */
 .navbar {
     width: 100%;
