--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,8 @@ body {
 
 /*Flex-Wrapper*/
 
-.wrapper {
+.content-wrapper {
     display: flex;
-    flex-direction: column;
 }
 
 /* Container Styles */
@@ -37,8 +36,6 @@ body {
 
 /* About Container */
 .container-about {
-    margin-top: 12rem;
-    margin-bottom: 12rem;
     display: flex;
     flex-direction: row;
 }
@@ -51,7 +48,6 @@ body {
 }
 
 div.intro-container {
-    margin-top: 12rem;
     height: 30vh;
     background: #2c2c2c;
 }
@@ -65,9 +61,9 @@ div.typed-intro {
 /* Projects Container */
 div.project-container {
     display: block;
+    flex: 1 0 50%;
     width: 100%;
     height: 100%;
-    border-radius: 50%;
     animation: fadeIn 0.8s ease-out;
 }
 
@@ -77,7 +73,7 @@ div.project-container {
     width: 100%;
 }
 .project-content {
-    margin: 0 6px 0 6px;
+    margin: 6px;
 }
 .project-container:hover .project-image {
     -webkit-transform: scale(1.2);
@@ -115,6 +111,7 @@ div.project-container {
 .project-image {
     display: block;
     width: 100%;
+    height: 350px;
     -webkit-transition: transform 0.8s ease;
     -moz-transition: transform 0.8s ease;
     -o-transition: transform 0.8s ease;
@@ -163,7 +160,13 @@ div.project-container {
         opacity: 1;
     }
 }
-
+/* Flexbox */
+.flex-projects {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 12rem;
+    margin-bottom: 12rem;
+}
 /* Projects Grid */
 .grid-400 {
     max-width: 1200px;
@@ -176,29 +179,20 @@ div.project-container {
 
 /* Navbar */
 .navbar {
-    width: 100%;
+    background: #000;
+    position: fixed;
+    width: 250px;
+    height: 100%;
+    z-index: 1000;
 }
 
 .navbar>ul {
-    position: fixed;
-    top: 0;
     list-style: none;
     display: flex;
-    flex-direction: row;
-    margin-top: 1rem;
-}
-
-.navbar>ul>li {
-    background: black;
-    padding: 10px;
-}
-
-.navbar>ul>li:nth-child(2) {
-    margin-left: 1rem;
-}
-
-.navbar>ul>li:last-child {
-    margin-left: 1rem;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 5rem;
 }
 
 .navbar>ul>li>a {
@@ -315,66 +309,17 @@ div.project-container {
 }
 
 @media screen and (max-width: 700px) {
-    .wrapper {
+    .content-wrapper {
         display: flex;
         flex-direction: column;
     }
-
-    .container-projects {
-        margin: 0;
+    .navbar {
+        display: none;
     }
-
-    .project-row {
-        margin: 1rem 0 0 0;
+    .project-image {
+        height: 150px;
     }
-
-    .container-about {
-        display: flex;
-        flex-direction: column;
-        margin: 0 0 12rem;
-
-    }
-
-    .project {
-        flex-grow: 1;
-        margin-left: 5px;
-        background: #2c2c2c;
-        border: 1px solid lightblue;
-        box-shadow: 5px 5px black;
-    }
-
-    .container-about>p {
-        margin: 0 auto;
-        width: 75%;
-        font-size: 12px;
-    }
-
-
     .p-text {
-        font-size: 18px;
-
-    }
-
-    div.intro-container {
-        width: 100%;
-        margin: 5px 5px 5px auto;
-        height: 30vh;
-    }
-
-    div.typed-intro {
-        width: 85%;
-        margin: 1rem auto;
-    }
-
-    .navbar>ul {
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        visibility: hidden;
-    }
-
-    .project-text {
-        font-size: 10px;
+        font-size: 12px;
     }
 }
