--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,11 +190,11 @@ div.project-container {
     list-style: none;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-items: center;
+}
+.navbar>ul>li {
     margin-top: 5rem;
 }
-
 .navbar>ul>li>a {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
@@ -202,6 +202,10 @@ div.project-container {
     text-decoration: none;
     padding: 10px;
     font-size: 24px;
+}
+.navbar>ul>li>a>i {
+    font-size: 36px;
+    color: #efefef;
 }
 
 .navbar>ul>li>a:hover {
