fine tuning sidebar and content

--- a/assets/css/dan.scss
+++ b/assets/css/dan.scss
@@ -25,7 +25,7 @@
     @return $result;
 }
 
-$size: 10px;
+$size: 8px;
 
 $t: #000;
 $b: #2c2c2c;
@@ -59,9 +59,10 @@ $dan: (($t, $t, $t, $t, $t, $b, $b, $b, $b, $b, $b, $b, $b, $b, $t, $t, $t, $t, 
 
 #dan {
     display: block;
-    width: calc(22 * #{$size});
-    height: calc(22 * #{$size});
-    margin: 5rem auto;
+    width: calc(25 * #{$size});
+    height: calc(25 * #{$size});
+    margin-top: 5rem;
+    margin-left: 1rem;
 
 
     &::after {
@@ -69,6 +70,7 @@ $dan: (($t, $t, $t, $t, $t, $b, $b, $b, $b, $b, $b, $b, $b, $b, $t, $t, $t, $t, 
         display: block;
         width: $size;
         height: $size;
+        margin-left: 1rem;
         box-shadow:
             pixelize($dan, $size);
     }
