--- a/assets/css/media-queries.css
+++ b/assets/css/media-queries.css
@@ -188,4 +188,13 @@
     .p-text {
         font-size: 2em;
     }
+    .flex-projects{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .project-container {
+        flex: 1 0 50%;
+        width: 50%;
+    }
 }
