--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -2,8 +2,7 @@
 div.project-container {
     display: block;
     flex: 1 0 50%;
-    width: 100%;
-    height: 100%;
+    align-items: center;
     animation: fadeIn 0.8s ease-out;
 }
 
