--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,15 +1,37 @@
 /* Navbar */
-.navbar {
+.main-menu {
     background: #3e444f;
     position: fixed;
     height: 100%;
-    z-index: 1;
-    /* transitions */
-    -webkit-transition: transform 0.6s ease-in-out;
-    -moz-transition: transform 0.6s ease-in-out;
-    -ms-transition: transform 0.6s ease-in-out;
-    -o-transition: transform 0.6s ease-in-out;
-    transition: transform 0.6s ease-in-out;
+    z-index: 999;
+    display: none;
+    left: -200px;
+    top: 0;
+    overflow-x: visible;
+    overflow-y: auto;
+    transition: transform 0.6s ease;
+}
+
+.main-menu:target {
+    display: block;
+    left: 0;
+    outline: none;
+}
+
+.main-menu:target .menu-close {
+    z-index: 1001;
+}
+
+.main-menu:target+.backdrop {
+    position: fixed;
+    display: block;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 998;
+    background: rgba(0, 0, 0, .85);
+    cursor: default;
 }
 
 .navbar>ul {
@@ -42,30 +64,31 @@
     border-bottom: 1px solid lightblue;
 }
 
-.nav-right-hamburger {
-    display: none;
+.nav-left-hamburger {
+    display: block;
 }
 
-.hamburger-button {
-    cursor: pointer;
-    -webkit-transition: all 0.8s ease;
-    -moz-transition: all 0.8s ease;
-    -ms-transition: all 0.8s ease;
-    -o-transition: all 0.8s ease;
-    transition: all 0.8s ease;
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
 }
 
-.bar {
-    background: #3e444f;
-    height: 2px;
-    width: 24px;
-    margin: 6px auto;
-    -webkit-transition: all 0.8s ease;
-    -moz-transition: all 0.8s ease;
-    -ms-transition: all 0.8s ease;
-    -o-transition: all 0.8s ease;
-    transition: all 0.8s ease;
+.menu-toggle {
+    color: #3e444f;
+    margin-left: 1rem;
 }
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+    color: #248ee3;
+}
+
 
 .move-to-right {
     display: block;
