created horizontal display for navbar at screens greater than 800px

--- a/assets/css/dan.scss
+++ b/assets/css/dan.scss
@@ -61,8 +61,6 @@ $dan: (($t, $t, $t, $t, $t, $b, $b, $b, $b, $b, $b, $b, $b, $b, $t, $t, $t, $t, 
     display: block;
     width: calc(25 * #{$size});
     height: calc(25 * #{$size});
-    margin-top: 5rem;
-    margin-left: 1rem;
 
 
     &::after {
@@ -70,16 +68,15 @@ $dan: (($t, $t, $t, $t, $t, $b, $b, $b, $b, $b, $b, $b, $b, $b, $t, $t, $t, $t, 
         display: block;
         width: $size;
         height: $size;
-        margin-left: 1rem;
         box-shadow:
             pixelize($dan, $size);
     }
 }
 
-@media all and (max-width: 700px) {
+@media all and (min-width: 800px) {
     .sp-pixel {
         display:block;
-        // width: calc(30 * 5px);
+        width: calc(30 * 5px);
         height: calc(30 * 5px);
         margin-top: 2rem;
         margin-left: 2rem;
