--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -1,4 +1,4 @@
-/* Navbar */
+/* main-menu */
 .main-menu {
     background: #3e444f;
     position: fixed;
@@ -9,7 +9,7 @@
     top: 0;
     overflow-x: visible;
     overflow-y: auto;
-    transition: transform 0.6s ease;
+    transition: left 0.6s ease;
 }
 
 .main-menu:target {
@@ -30,42 +30,40 @@
     width: 100%;
     height: 100%;
     z-index: 998;
-    background: rgba(0, 0, 0, .85);
+    background: #248ee3;
+    opacity: .85;
     cursor: default;
 }
 
-.navbar>ul {
+.main-menu>ul {
     list-style: none;
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 200px;
 }
 
-.navbar>ul>li {
+.main-menu>ul>li {
     margin-top: 5rem;
 }
 
-.navbar>ul>li>a {
+.main-menu>ul>li>a {
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
-    color: #a7d4f8;
+    color: #248ee3;
     text-decoration: none;
     padding: 10px;
     font-size: 24px;
 }
 
-.navbar>ul>li>a>i {
+.main-menu>ul>li>a>i {
     font-size: 36px;
-    color: #a7d4f8;
+    color: #248ee3;
 }
 
-.navbar>ul>li>a:hover {
+.main-menu>ul>li>a:hover {
     cursor: pointer;
     border-bottom: 1px solid lightblue;
-}
-
-.nav-left-hamburger {
-    display: block;
 }
 
 .sr-only {
@@ -82,6 +80,7 @@
 .menu-toggle {
     color: #3e444f;
     margin-left: 1rem;
+    font-size: 2rem;
 }
 
 .menu-toggle:hover,
@@ -90,12 +89,32 @@
 }
 
 
-.move-to-right {
-    display: block;
-    /* transitions */
-    -webkit-transform: translateX(-375px);
-    -moz-transform: translateX(-375px);
-    -ms-transform: translateX(-375px);
-    -o-transform: translateX(-375px);
-    transform: translateX(-375px);
+@media screen and (min-width: 800px) {
+    .menu-toggle, 
+    .main-menu .menu-close {
+        display: none;
+    }
+    .main-menu {
+        position: static;
+        display: block;
+    }
+    .main-menu>ul {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        width: auto;
+        padding: 0;
+        background: none;
+        overflow: hidden;
+        text-align: center;
+    }
+   .main-menu>ul>li {
+       margin: 0;
+   }
+   .main-menu>ul>li>a {
+       font-size: 2rem;
+   }
+   .main-menu>ul:last-child>a {
+       font-weight: bold;
+   }
 }
